package org.example;

public enum Status {
        OPEN,
        CLOSE

}
