@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Repository{
countriesLisr: CountriesList
}

class Address{
street: String
zip: String
coordinates: Gps
}

class City{
name: String
chargersList: SuperChargersList
}

class Country{
name: String
states: StatesList
sales: SalesList
}

class Gps{
latitute: double
longitude: double
}

enum PowerTrain{
BEV
PHEV
description: String
}

class SalesData{
year: int
numVehicles: int
powerTrain: PowerTrain
}

class State{
name: String
cities: CitiesList
}

enum Status{
OPEN
CLOSE
}

class SuperCharger{
name: String
stalls: int
kW: double
elevm: int
address: Address
status: Status
}

class CitiesList{
}

class CountriesList{
}

class SalesList{
}

class StatesList{
}

class SuperChargersList{
}

' --------- Relações ----------------

Repository "1" -- "1" CountriesList: has

CountriesList "1" -- "1..*" Country: has

Country "1" -- "1" StatesList: has
StatesList "1" -- "1..*" State: has

Country "1" -- "1" SalesList: has
SalesList "1" -- "1..*" SalesData: has
SalesData "1" -- "1" PowerTrain: has

City "1" -- "1" SuperChargersList: has

CitiesList "1" -- "1..*" City: has

SuperCharger -- Status: is >
SuperCharger "1" -- "1" Address: has

SuperChargersList "1" -- "1..*" SuperCharger: has

Address "1" -- "1" Gps: has


@enduml